# baby_jubjub_ecc

./: CMakeLists.txt  README.md
baby_jubjub_ecc/: CMakeLists.txt  baby_jubjub.cpp  baby_jubjub.hpp  eddsa.cpp  eddsa.hpp  main.cpp  pedersen_commitment.cpp  pedersen_commitment.hpp
src/: CMakeLists.txt  baby_jubjub.hpp  baby_jubjub.tcc  eddsa.hpp  eddsa.tcc  main.cpp  pedersen_commitment.hpp  pedersen_commitment.tcc
tests/: ed25519.py  sapling_jubjub.py  sapling_utils.py  test.py  test_eddsa.py  test_mul.py  test_pedersen.py
